--- a/movieRecommender.css
+++ b/movieRecommender.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Courier, serif;
+    font-family: Courier;
     font-size: 25px;
     background-color: rgb(246, 238, 227);
     color: rgb(25, 25, 25);
@@ -14,30 +14,31 @@ body {
     text-align: center;
 }
 
-.dark-mode {
-    font-family: Courier;
-    font-size: 17px;
-    background-color: rgb(39, 33, 20);
-    color: rgb(246, 238, 227);
-    padding: 5px;
-    margin-top: 5px;
-    cursor: pointer;
-}
-
-.logo {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 250px;
-}
-
 .description-1 {
-    font-size: 20px;
+    font-size: 15px;
+}
+
+li {
+    font-size: 15px;
+}
+
+.description-2 {
+    font-size: 15px;
 }
 
 html {
     min-height: 100%;
     overflow: hidden;
+}
+
+.search {
+    text-align: center;
+    padding: 10px;
+    padding-top: 0px;
+}
+
+.search-bar {
+    font-family: Courier;
 }
 
 .line-1{
